--- a/style.css
+++ b/style.css
@@ -263,6 +263,11 @@ header {
     font-size: 500;
 }
 
+a{
+    text-decoration: none;
+    color: white;
+}
+
 .login-register {
     font-size: .9em;
     color: #fff;
