--- a/Sub-site/Serviços.css
+++ b/Sub-site/Serviços.css
@@ -25,9 +25,7 @@ body {
     backdrop-filter: blur(20px);
     box-shadow: 0 0 30px rgba(0, 0, 0, .5);
     display: flex;
-    justify-content: center;
     color: white;
-    align-items: center;
     flex-direction: column;
     overflow: hidden;
     margin-bottom: -1.36em;
@@ -114,8 +112,8 @@ header {
 /*Para deixar a caixa centralizada*/
 .wrapper .form-box {
     width: 100%;
-    padding: 40px;
-    
+    padding: 1.4rem 2rem 0rem 6rem;
+
 }
 
 .wrapper .form-box.login {
@@ -140,9 +138,10 @@ header {
 }
 /*Login que esta dentro da caixa*/
 .form-box h2{
-    font-size: 1.5em;
+    font-size: 1.8em;
     color: #fff;
     text-align: center;
+    margin-top: 2rem;
 }
 /*As duas linhas brancas embaixo de email e senha*/
 .input-box {
@@ -166,7 +165,7 @@ header {
 }
 /*Quando o usuario clica para digitar em email ou senha o que esta escrito sobe e aparece um cursor para*/
 .input-box input:focus~label,
-.input-box input:valid~label {
+.input-box input:valid~label{
     top: -5px;
 }
 /*A caixa onde o usuario digita seu email e sua senha*/
@@ -245,6 +244,48 @@ header {
     color: #fff;
     text-decoration: none;
     font-weight: 600;
+}
+
+.div1{
+    display: inline-flex;
+}
+
+.div2{
+    display: block;
+}
+
+.Gestão{
+    width: 60%;
+    margin-top: 2vw ;
+    border: 0.2vw solid white;
+}
+
+.Migração{
+    width: 60%;
+    margin-top: 2vw ;
+    margin-right: 8vw;
+    border: 0.2vw solid white;
+}
+
+.logo{
+    height: 7vh;
+    margin-top: -1.6vh;
+}
+
+.info{
+    display: inline-flex;
+    margin-right: 4rem;
+    margin-top: 2rem;
+}
+
+.Psobrenos{
+    letter-spacing: 0.8px;
+}
+
+.info p{
+    z-index: 2;
+    padding: 2rem 0rem 0rem 2rem;
+    text-align: justify;
 }
 
 .footer{
