--- a/Sub-site/Contato.css
+++ b/Sub-site/Contato.css
@@ -17,8 +17,8 @@ body {
 /*A caixa onde fica todo o conteudo central*/
 .wrapper{
     position: relative;
-    width: 600em;
-    height: 52em;
+    width: 50em;
+    height: 45em;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .5);
     /*border-radius: 20px;*/
@@ -271,3 +271,75 @@ header {
     width: 100%;
 }
 }
+
+form {
+    max-width: 500px;
+    margin: 0 auto;
+    color: #fff;
+}
+label {
+    display: block;
+    margin-top: 10px;
+    color: #fff;
+}
+input, textarea {
+    padding: 5px;
+    margin-top: 5px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #45a049;
+}
+
+.btn-transparent {
+    background: transparent;
+    border: none;
+    color: #fff;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 1em;
+    color: #fff;
+  }
+
+  .input-box {
+    position: relative;
+    margin-bottom: 20px;
+  }
+  
+  .input-box textarea {
+    height: 200px;
+    padding: 10px;
+    border-radius: 10px;
+    resize: none;
+  }
+  
+  .input-box textarea:focus + label,
+  .input-box textarea:valid + label {
+    top: -15px;
+    font-size: 12px;
+    color: #fff;
+  }
+  
+  .input-box label {
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    font-size: 16px;
+    color: #999;
+    pointer-events: none;
+    transition: all 0.2s ease-out;
+  }
+  
+  
