--- a/Sub-site/Contato.css
+++ b/Sub-site/Contato.css
@@ -31,6 +31,7 @@ body {
     flex-direction: column;
     overflow: hidden;
     margin-bottom: -1.36em;
+    border-radius: 20px;
 }
 /*Barra onde fica a logo e as principais funcionalidades*/
 header {
@@ -114,7 +115,7 @@ header {
 .wrapper .form-box {
     width: 100%;
     padding: 40px;
-    
+    margin-bottom: 6.8vw;
 }
 
 .wrapper .form-box.login {
@@ -304,7 +305,7 @@ button:hover {
 
 .btn-transparent {
     background: transparent;
-    border: none;
+    border: 0.1vw solid white;
     color: #fff;
     border-radius: 6px;
     cursor: pointer;
@@ -322,6 +323,7 @@ button:hover {
     padding: 10px;
     border-radius: 10px;
     resize: none;
+    margin-bottom: 1.4vw;
   }
   
   .input-box textarea:focus + label,
