--- a/Sub-site/Serviços.css
+++ b/Sub-site/Serviços.css
@@ -255,8 +255,8 @@ header {
 }
 
 .Migração{
-    width: 38vw;
-    height: 24vw;
+    width: 43vw;
+    height: 29vw;
     margin-top: 2vw ;
     margin-right: 4vw;
     border: 0.1vw solid white;
@@ -273,7 +273,15 @@ header {
     margin-top: 2rem;
 }
 
-.Psobrenos{
+.Pgestão{
+    letter-spacing: 0.8px;
+}
+
+.Pmigração{
+    letter-spacing: 0.8px;
+}
+
+.Pdesenvolvimento{
     letter-spacing: 0.8px;
 }
 
