--- a/style.css
+++ b/style.css
@@ -268,6 +268,18 @@ a{
     color: white;
 }
 
+.footer{
+	background-color: #24262b;
+    position: absolute;
+    bottom: 0;
+    padding: 1em 0em 1em 0em;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+}
+
 .login-register {
     font-size: .9em;
     color: #fff;
