--- a/Gestão de produtos/func/style.css
+++ b/Gestão de produtos/func/style.css
@@ -38,7 +38,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 100px;
+    padding: 2vw 6vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
